@@ -1,2 +1,3 @@
 22/05/2020 - create folder repositories with all requirement files of the project including: readme.txt, changelog.txt, licenses.txt and source code folder
 23/05/2020 - create firebase account, add firebase to my application, create sign up function and login function for my app
+24/05/2020 - create sign up function and forget password activity to create user account- need to verify email, user can reset their password
